massive style changes

--- a/src/main/resource/styles.css
+++ b/src/main/resource/styles.css
@@ -10,6 +10,15 @@ h1 {
 h2 {
 	color: #FFFFFF;
 }
+h3 {
+	color: #FFFFFF;
+}
+h4 {
+	color: #FFFFFF;
+}
+h5 {
+	color: #FFFFFF;
+}
 div.menuBar {
 	position: absolute;
 	top: 20px;
@@ -18,13 +27,48 @@ div.menuBar {
 	background-color: lightslategrey;
 }
 div.logoText {
+	cursor: pointer;
 	text-decoration-color: darkolivegreen;
 	text-shadow: #1A191E;
 	height: 30px;
+	width: 20%;
 	font-family: Cand, serif;
 	font-size: 30px;
 	vertical-align: center;
 }
+
+div.logoText {
+	text-transform: uppercase;
+	color: white;
+	text-align: center;
+	animation: neonGlow 2s infinite alternate;
+}
+
+@keyframes neonGlow {
+	0% {
+		text-shadow: 0 0 10px rgba(255,255,255,.8),
+		0 0 20px rgba(255,255,255,.8),
+		0 0 22px  rgba(255,255,255,.8),
+		0 0 40px  rgba(66,220,219,.8),
+		0 0 60px  rgba(66,220,219,.8),
+		0 0 80px  rgba(66,220,219,.5),
+		0 0 100px rgba(66,220,219,.5),
+		0 0 140px rgba(66,220,219,.5),
+		0 0 200px rgba(66,220,219,.5);
+	}
+	100% {
+		text-shadow: 0 0 2px rgba(255,255,255,.8),
+		0 0 8px rgba(255,255,255,.8),
+		0 0 10px rgba(255,255,255,.8),
+		0 0 20px rgba(66,220,219,.8),
+		0 0 30px rgba(66,220,219,.8),
+		0 0 40px rgba(66,220,219,.8),
+		0 0 50px rgba(66,220,219,.5),
+		0 0 80px rgba(66,220,219,.5);
+	}
+}
+
+
 div.signIn {
 	cursor: pointer;
 	height: 30px;
@@ -40,10 +84,8 @@ div.signUp {
 	vertical-align: top;
 }
 div.commonSpace {
-	position: absolute;
-	left: 15%;
-	top: 10%;
-	width: 70%;
+	width: 80%;
+	margin: 100px auto 0;
 	padding: 1%;
 }
 div.text {
@@ -61,4 +103,20 @@ div.result {
 	border-width: thin;
 	border-style: dashed;
 	border-color: white;
+}
+div.leftSideBarSpace {
+	background-color: lightslategrey;
+	height: available;
+	width: 300px;
+}
+div.leftSideBarElement {
+	cursor: pointer;
+	height: 30px;
+	width: 300px;
+	font-family: Serif, serif;
+	font-size: 2vw;
+}
+div.leftSideBarElement:hover {
+	background-color: cornflowerblue;
+	TEXT-DECORATION: none;
 }
