add keywords and delete keywords functionality. And some style changes

--- a/src/main/resource/styles.css
+++ b/src/main/resource/styles.css
@@ -21,16 +21,28 @@ h4 {
 h5 {
 	color: #FFFFFF;
 }
+table {
+	margin: 0 auto;
+	vertical-align: center;
+}
+td {
+	vertical-align: center;
+	color: #FFFFFF;
+	font-size: 17px;
+	font-weight: bold;
+	padding: 5px;
+}
 .button {
     background-color:  darkslategray; /* Green */
     border: none;
     color: black;
-    padding: 10px 22px;
+    padding: 5px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 14px;
 	float: right;
+	margin: 5px 0px 5px 5px;
 }
 
 h5.DTransparentText{
@@ -118,9 +130,8 @@ div.signIn {
 }
 
 div.signIn:hover {
-	background-color: cornflowerblue;
+	background-color: lightslategrey;
 	TEXT-DECORATION: none;
-	opacity: 0.5;
 }
 
 div.signUp {
@@ -134,9 +145,8 @@ div.signUp {
 }
 
 div.signUp:hover {
-	background-color: cornflowerblue;
+	background-color: lightslategrey;
 	TEXT-DECORATION: none;
-	opacity: 0.5;
 }
 
 div.commonSpace {
@@ -172,6 +182,8 @@ div.leftSideBarElement {
 	height: 40px;
 	width: 300px;
 	font-size: 18px;
+	font-weight: normal;
+	color: #000000;
     margin-bottom: 25px;
     padding-left: 5px;
 	padding-top: 13px;
@@ -183,6 +195,8 @@ div.leftSideBarElement_picked {
 	height: 40px;
 	width: 300px;
 	font-size: 20px;
+	font-weight: normal;
+	color: #000000;
 	margin-bottom: 25px;
 	padding-left: 5px;
 	padding-top: 10px;
@@ -192,20 +206,21 @@ div.leftSideBarElement_picked {
 
 }
 div.leftSideBarElement:hover {
-	background-color: cornflowerblue;
+	background-color: lightslategrey;
 	TEXT-DECORATION: none;
-	opacity: 0.5;
 }
 div.rightSideCommonSpace {
     top: 50px;
     left: 500px;
+	width: available;
     align-content: center;
 }
 div.rightSideContentSpace {
+	position: relative;
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
 	align-content: center;
+	width: available;
 }
 
 input.customDisabledField {
