add endlines and delete endlines functionality. And some style changes

--- a/src/main/resource/styles.css
+++ b/src/main/resource/styles.css
@@ -1,4 +1,10 @@
 body{
+	position: absolute;
+	top: 0;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	align-content: center;
 	background-color: #1A191E;
 }
 html {
@@ -61,12 +67,28 @@ h5.DTransparentText{
 div.menuBar {
 	position: absolute;
     vert-align: middle;
-	top: 20px;
 	width: 99%;
+	left: 5px;
 	height: 40px;
+	margin: 0;
+	padding: 0;
 	background-color:  darkslategray;
 	box-shadow: -7px 15px 3px rgba(0,0,0,0.5);
     display: table;
+}
+
+div.footer {
+	position: relative;
+	bottom: 20px;
+	vert-align: middle;
+	width: 99%;
+	left: 5px;
+	height: 40px;
+	padding: 0;
+	margin: 50px 0 0 0;
+	background-color:  darkslategray;
+	box-shadow: -7px 15px 3px rgba(0,0,0,0.5);
+	display: table;
 }
 
 div.logoText {
@@ -150,6 +172,7 @@ div.signUp:hover {
 }
 
 div.commonSpace {
+	position: relative;
 	width: 80%;
 	margin: 100px auto 0;
 	padding: 1%;
@@ -162,6 +185,7 @@ div.template {
 	border-width: thin;
 	border-style: dashed;
 	border-color: white;
+	margin-bottom: 50px;
 }
 div.result {
 	float: right;
@@ -169,13 +193,13 @@ div.result {
 	border-width: thin;
 	border-style: dashed;
 	border-color: white;
+	margin-bottom: 50px;
 }
+
 div.leftSideBarSpace {
     position: sticky;
     left: 100px;
-	height: available;
 	width: 300px;
-    margin-top: 50px;
 }
 div.leftSideBarElement {
 	cursor: pointer;
